Bug 15000 - Memory leak in FAST cookie handling
Summary: Memory leak in FAST cookie handling
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: AD: LDB/DSDB/SAMDB (show other bugs)
Version: 4.16.0rc4
Hardware: All All
: P5 regression (vote)
Target Milestone: 4.16
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-03-08 09:45 UTC by Andrew Bartlett
Modified: 2022-03-21 12:17 UTC (History)
2 users (show)

See Also:


Attachments
Patch for v4-16-test (1.05 KB, patch)
2022-03-11 16:55 UTC, Stefan Metzmacher
abartlet: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andrew Bartlett 2022-03-08 09:45:26 UTC
The code to get the FAST cookie fails to call sdb_free_entry()
Comment 1 Samba QA Contact 2022-03-11 11:06:04 UTC
This bug was referenced in samba master:

b7bc1f6dddc1c5fee8a39422823f167db1f24bb2
Comment 2 Stefan Metzmacher 2022-03-11 16:55:51 UTC
Created attachment 17210 [details]
Patch for v4-16-test
Comment 3 Andrew Bartlett 2022-03-11 18:36:39 UTC
Assigning to Jule for 4.16.0

Thanks Metze!
Comment 4 Jule Anger 2022-03-14 14:25:44 UTC
Pushed to autobuild-v4-16-test.
Comment 5 Samba QA Contact 2022-03-14 15:25:06 UTC
This bug was referenced in samba v4-16-test:

1fcb5ed30f9a2b2fd7e02be66ab6052ae960aeed
Comment 6 Jule Anger 2022-03-14 15:32:08 UTC
Closing out bug report.

Thanks!
Comment 7 Samba QA Contact 2022-03-21 12:17:45 UTC
This bug was referenced in samba v4-16-stable (Release samba-4.16.0):

1fcb5ed30f9a2b2fd7e02be66ab6052ae960aeed